[tool.poetry]
name = "unittest-proj"
version = "0.1.0"
description = ""
authors = ["petrovi4 <40.10.444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
